# SQCli

./: .clang-tidy  .gitmodules  .vimspector.json  CMakeLists.txt  Dockerfile  README.md  default.nix  shell.nix
.github/workflows/: linux.yml  ubuntu.yml
modules/: CMakeLists.txt
sqcli/: CMakeLists.txt  enum.hpp  main.cpp
sqcli/io_controller/: io_controller.cpp  io_controller.hpp
sqcli/options/: options.cpp  options.hpp
sqcli/options/callback_data/: callback_data.cpp  callback_data.hpp
sqcli/sqcli/: sqcli.cpp  sqcli.hpp
sqcli/sqcli/options/: options.cpp  options.hpp
